--- a/layanan-bridal-makeup.html
+++ b/layanan-bridal-makeup.html
@@ -154,13 +154,13 @@
 
             <div class="row g-3 gallery">
 
-                <div class="col-sm-6 col-md-4"><img src="gambar/gambar 2.jpeg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/totamma.jpeg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/gambar pengantin.jpeg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/pegelaran.jpeg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/sertifikat ghadis suci.jpeg" class="img-popup" alt="">
+                <div class="col-sm-6 col-md-4"><img src="gambar/gambar 2.jpeg" loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/totamma.jpeg"  loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/gambar pengantin.jpeg"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/pegelaran.jpeg" class="img-popup" loading="lazy"  alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/sertifikat ghadis suci.jpeg"  loading="lazy" class="img-popup" alt="">
                 </div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/gambar makeup 1.jpeg" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/gambar makeup 1.jpeg" loading="lazy"  class="img-popup" alt=""></div>
 
             </div>
         </section>
