--- a/layanan-event-makeup.html
+++ b/layanan-event-makeup.html
@@ -160,13 +160,14 @@
             <div class="row g-3 gallery">
 
                 <div class="col-sm-6 col-md-4"><img src="gambar/Event/7900befe-4872-4d27-8206-dcfe6ddb57f6.JPG"
-                        class="img-popup" alt=""></div>
+                        class="img-popup" loading="lazy"  alt=""></div>
                 <div class="col-sm-6 col-md-4"><img src="gambar/Event/b2a53043-7a42-4dd4-b022-24b4333f898f.JPG"
-                        class="img-popup" alt=""></div>
+                         loading="lazy" class="img-popup" alt=""></div>
                 <div class="col-sm-6 col-md-4"><img src="gambar/Event/d5e3a550-5e01-4d6d-ae48-8e9bbc43a73f.JPG"
-                        class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Event/IMG_1885.PNG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Event/IMG_1886.PNG" class="img-popup" alt=""></div>
+                         loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Event/IMG_1885.PNG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Event/IMG_1886.PNG"  loading="lazy" class="img-popup" alt=""></div>
+            </div>
             </div>
         </section>
 
