--- a/layanan-karakter-makeup.html
+++ b/layanan-karakter-makeup.html
@@ -158,16 +158,16 @@
 
             <div class="row g-3 gallery">
 
-                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar1.JPG" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar1.JPG"  loading="lazy" class="img-popup" alt=""></div>
                 <!-- <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar2.JPG" class="img-popup" alt=""></div> -->
-                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar3.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar4.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar5.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar6.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar7.jpg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar8.jpg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar9.jpg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar10.PNG" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar3.JPG"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar4.JPG"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar5.JPG"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar6.JPG"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar7.jpg"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar8.jpg"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar9.jpg"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Karakter/gambar10.PNG"  loading="lazy" class="img-popup" alt=""></div>
 
             </div>
         </section>
