--- a/layanan-photoshoot-makeup.html
+++ b/layanan-photoshoot-makeup.html
@@ -157,26 +157,26 @@
 
 
             <div class="row g-3 gallery">
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar1.jpeg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar2.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar3.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar4.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar5.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar6.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar7.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar8.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar9.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar10.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar11.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar12.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar13.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar14.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar15.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar16.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar17.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar18.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar19.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar20.JPG" class="img-popup" alt=""></div>
+    <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar1.jpeg" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar2.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar3.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar4.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar5.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar6.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar7.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar8.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar9.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar10.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar11.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar12.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar13.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar14.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar15.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar16.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar17.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar18.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar19.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Photoshot/gambar20.JPG" loading="lazy"  class="img-popup" alt=""></div>
             </div>
         </section>
 
