--- a/layanan-weeding-makeup.html
+++ b/layanan-weeding-makeup.html
@@ -158,19 +158,19 @@
 
 
             <div class="row g-3 gallery">
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar1.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar2.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar3.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar4.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar5.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar6.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar7.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar8.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar9.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar10.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar11.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar12.JPG" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar13.JPG" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar1.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar2.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar3.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar4.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar5.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar6.JPG"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar7.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar8.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar9.JPG" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar10.JPG" loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar11.JPG"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar12.JPG"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wedding/gambar13.JPG" loading="lazy"  class="img-popup" alt=""></div>
             </div>
         </section>
 
