--- a/layanan-wisuda-makeup.html
+++ b/layanan-wisuda-makeup.html
@@ -158,19 +158,19 @@
 
 
             <div class="row g-3 gallery">
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar1.jpeg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar2.jpeg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar3.jpeg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar4.jpeg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar5.jpg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar6.jpg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar7.jpg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar8.jpg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar9.jpg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar10.jpg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar11.jpg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar12.jpg" class="img-popup" alt=""></div>
-                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar13.png" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar1.jpeg" loading="lazy"  class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar2.jpeg"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar3.jpeg"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar4.jpeg"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar5.jpg"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar6.jpg"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar7.jpg"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar8.jpg"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar9.jpg"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar10.jpg"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar11.jpg"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar12.jpg"  loading="lazy" class="img-popup" alt=""></div>
+                <div class="col-sm-6 col-md-4"><img src="gambar/Wisuda/gambar13.png"  loading="lazy" class="img-popup" alt=""></div>
             </div>
         </section>
 
