--- a/layanan-karakter-makeup.html
+++ b/layanan-karakter-makeup.html
@@ -133,6 +133,14 @@
         #nextBtn:hover {
             opacity: 1;
         }
+
+        #imgModal img {
+    max-height: 90vh;
+    width: auto;
+    object-fit: contain;
+    margin: auto;
+    display: block;
+}
     </style>
 </head>
 
