--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
                 <div class="col-sm-6 col-md-4">
                     <a href="layanan-photoshoot-makeup.html" class="text-decoration-none">
                         <div class="service-img-card">
-                            <img src="gambar/Photoshot/gambar17.JPG">
+                            <img src="gambar/Photoshot/gambar17.jpeg">
                             <div class="service-img-label">Makeup Photoshoot</div>
                         </div>
                     </a>
@@ -640,7 +640,7 @@
                 <div class="col-sm-6 col-md-4">
                     <a href="layanan-weeding-makeup.html" class="text-decoration-none">
                         <div class="service-img-card">
-                            <img src="gambar/Wedding/gambar2.JPG">
+                            <img src="gambar/Wedding/gambar2.jpeg">
                             <div class="service-img-label">Wedding & Prewedding</div>
                         </div>
                     </a>
@@ -660,7 +660,7 @@
                 <div class="col-sm-6 col-md-4">
                     <a href="layanan-event-makeup.html" class="text-decoration-none">
                         <div class="service-img-card">
-                            <img src="gambar/Event/b2a53043-7a42-4dd4-b022-24b4333f898f.JPG">
+                            <img src="gambar/Event/gambar2.jpeg">
                             <div class="service-img-label">Makeup Event</div>
                         </div>
                     </a>
@@ -670,7 +670,7 @@
                 <div class="col-sm-6 col-md-4">
                     <a href="layanan-karakter-makeup.html" class="text-decoration-none">
                         <div class="service-img-card">
-                            <img src="gambar/Karakter/gambar5.JPG">
+                            <img src="gambar/Karakter/gambar5.jpeg">
                             <div class="service-img-label">Makeup Fantasy / Character</div>
                         </div>
                     </a>
